--- a/src/pages/Posts/Posts.css
+++ b/src/pages/Posts/Posts.css
@@ -1,5 +1,6 @@
 .posts{
     width: 100%;
+    height: 100%;
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -24,5 +25,18 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
+}
+
+.post-action{
+    color: #FFFFFF;
+    height: 43px;
+    border-radius: 4px;
+    border: none;
+    background: #4A96FF;
+    width: 111px;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    margin-left: auto;
 }
 
